# asyncedlyrics

./: README.md  pyproject.toml  tests.py
.github/workflows/: tests.yml
asyncedlyrics/: __init__.py  __main__.py  cli.py  utils.py
asyncedlyrics/providers/: __init__.py  base.py  deezer.py  genius.py  lrclib.py  lyricsify.py  megalobiz.py  musixmatch.py  netease.py
